[FIX] website: extend size of mobile menu with language dropdown
On the mobile menu with some headers (default, slogan, contact, centered
logo, image), if you click on the languages dropdown, you have to scroll
to see them. Scrolling shouldn't be needed.

Steps to reproduce:
- Edit and click on the header
- Select "Language Selector": "Dropdown"
- Save
- In 15.0, open the dev tools and use the mobile view toggle.
- Open the menu, and click on the languages dropdown
=> A scrollbar appears inside the header, and you have to scroll to see
the languages.

opw-3761564

closes odoo/odoo#156546

--- a/addons/website/static/src/scss/website.scss
+++ b/addons/website/static/src/scss/website.scss
@@ -1468,6 +1468,20 @@ header {
             vertical-align: middle;
         }
     }
+
+    @if index(
+        ('default', 'slogan', 'Contact', 'centered_logo', 'image'),
+        o-website-value('header-template')
+    ) != null {
+        @include media-breakpoint-down(md) {
+            .dropdown-toggle {
+                display: block;
+            }
+            .dropdown-menu {
+                position: static;
+            }
+        }
+    }
 }
 .o_lang_flag {
     width: 1em;
